# simple-db-mcp-server

./: LICENSE  README.md  client.py  db.py  mcp_ecommerce.db  pyproject.toml  server.py
