[project]
name = "mcp-server-sqlite"
version = "0.1.0"
description = "A local MCP server to manage products in an eCommerce SQLite database."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "mcp[cli]>=1.9.2",
    "requests>=2.32.3",
]
